#771: Add driver download from appium for mobile tests